wecome screen function with instructions and start button

--- a/index.html
+++ b/index.html
@@ -20,16 +20,18 @@
         </div>
 
         <div id="timer">
-            Time Left in Game: <span id="gameTimer" class="nav-item"></span>
+            Time Left: <span id="gameTimer" class="nav-item"></span>
         </div>
 
     </nav>
 
     <div class="quiz-container">
 
+        <section id="container-content"></section>
+
     </div>
 
-    <script src="./assets/js/script.js"></script>
+    <script type= "text/javascript" src="./assets/js/script.js"></script>
 
 </body>
 
