--- a/index.html
+++ b/index.html
@@ -31,6 +31,11 @@
 
     </div>
 
+    <div>
+
+        <section> id = "</section>
+    </div>
+
     <script type= "text/javascript" src="./assets/js/script.js"></script>
 
 </body>
