working on saving to local storage

--- a/index.html
+++ b/index.html
@@ -31,9 +31,10 @@
 
     </div>
 
-    <div>
+    <div class="response-container">
 
-        <section> id = "</section>
+        <section id="question-response"></section>
+
     </div>
 
     <script type= "text/javascript" src="./assets/js/script.js"></script>
